use correct values for letter spacing

--- a/desktop/src/components/common/dialog/Dialog.scss
+++ b/desktop/src/components/common/dialog/Dialog.scss
@@ -54,7 +54,7 @@ $name: 'Dialog';
     font-size: 2.5rem;
     font-weight: 300;
     color: $white_a_90;
-    letter-spacing: 0.06125rem;
+    letter-spacing: 0.0625rem;
   }
 
   &__body {
