--- a/desktop/src/components/pages/AboutPage/timelineSection/TimelineSection.scss
+++ b/desktop/src/components/pages/AboutPage/timelineSection/TimelineSection.scss
@@ -15,7 +15,7 @@ $name: 'TimelineSection';
     background-color: $white;
     border-radius: 100%;
     outline-offset: 0.25rem;
-    outline: 0.06125rem solid #666;
+    outline: 0.0625rem solid #666;
     filter: brightness(90%);
 
     &--1 {
