--- a/desktop/src/components/pages/ExperiencePage/educationSection/EducationSection.scss
+++ b/desktop/src/components/pages/ExperiencePage/educationSection/EducationSection.scss
@@ -74,7 +74,7 @@ $name: 'EducationSection';
       color: $white_a_90;
       font-size: 1.25rem;
       font-weight: 300;
-      letter-spacing: 0.030625rem;
+      letter-spacing: 0.03125rem;
     }
   }
 }
