--- a/desktop/src/components/pages/ExperiencePage/projectsSection/ProjectsSection.scss
+++ b/desktop/src/components/pages/ExperiencePage/projectsSection/ProjectsSection.scss
@@ -79,7 +79,7 @@ $name: 'ProjectsSection';
         line-height: 4rem;
         font-size: 2rem;
         font-weight: 300;
-        letter-spacing: 0.06125rem;
+        letter-spacing: 0.0625rem;
         color: $white_a_90;
       }
 
