--- a/desktop/src/components/pages/ExperiencePage/skillsSection/SkillsSection.scss
+++ b/desktop/src/components/pages/ExperiencePage/skillsSection/SkillsSection.scss
@@ -94,7 +94,7 @@ $name: 'SkillsSection';
         width: 6rem;
         font-size: 1.125rem;
         font-weight: 300;
-        letter-spacing: 0.030625rem;
+        letter-spacing: 0.03125rem;
         color: $white_a_90;
         text-align: right;
       }
