--- a/desktop/src/components/pages/ExperiencePage/workSection/WorkSection.scss
+++ b/desktop/src/components/pages/ExperiencePage/workSection/WorkSection.scss
@@ -61,7 +61,7 @@ $name: 'WorkSection';
     font-size: 1rem;
     font-weight: 300;
     line-height: 1.5rem;
-    letter-spacing: 0.06125rem;
+    letter-spacing: 0.0625rem;
     opacity: 0.8;
     cursor: pointer;
 
@@ -133,7 +133,7 @@ $name: 'WorkSection';
     margin-bottom: 0.5rem;
     color: $turquoise;
     font-size: 1rem;
-    letter-spacing: 0.06125rem;
+    letter-spacing: 0.0625rem;
     opacity: 0.9;
   }
 
@@ -158,7 +158,7 @@ $name: 'WorkSection';
     margin-bottom: 1rem;
     color: $white_a_90;
     font-weight: 300;
-    letter-spacing: 0.030625rem;
+    letter-spacing: 0.0625rem;
   }
 
   &__panel-positon {
